# renaisscript

./: .clang-tidy  .gitignore  CMakeLists.txt  CONTRIBUTING.md  LICENSE  README.md
docs/: coding-standards.md  documentations.md  file-structure.md
include/: AST.h  fileread.h  include.md  lexer.h  optflags.h  parser.h  prodrules.h  token.h  tokens.h  visitor.h
lib/: libraries.md
res/: resources.md
src/: AST.c  fileread.c  lexer.c  main.c  optflags.c  parser.c  parser1.txt  parser3.txt  sources.md  token.c  visitor.c
test/: all.rn  assignment.rn  block.rn  comments.rn  conditional.rn  error.rn  file.rens  iterator.rn  operators.rn  parser.rn  print.rn  sample1.rn  string.rn  symbol-table.txt  test.md  test.rn  tokens.rn  tokens.txt
